[package]
name = "tokio-shared-nothing"
version = "0.1.0"
edition = "2021"

[dependencies]
core_affinity = "0.8.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "sync", "net"] }

[dev-dependencies]
futures = "0.3.30"
nanoid = "0.4.0"
tokio = { version = "1.38.0", features = ["rt", "sync", "time", "io-util", "macros"] }